# ft_printf

./: CMakeLists.txt  README.md  add_0_befor_numstr.c  add_0_for_numstr.c  b_options.c  bigintsum_toa.c  cast_d.c  cast_signed.c  cast_unsigned.c  conv_c.c  conv_to_strnum (for bigint).c  conv_to_strnum.c  conversion.c  count_digits.c  e_format.c  f_b.c  f_c.c  f_d.c  f_feEgG.c  f_format.c  f_i.c  f_o.c  f_p.c  f_pdiouxX.c  f_s.c  f_t.c  find_flags.c  flags.c  ft_fprintf.c  ft_memdup.c  ft_memjoin.c  ft_printf.c  ft_printf.h  ft_printf2.c  ft_putmem.c  g_format.c  get_exp_count.c  get_float_number.c  get_float_params.c  get_format_number.c  (+12 more)
libft/: Makefile  ft_itoa_base.c  ft_longtoa_base.c  ft_lstprint.c  ft_memalloc_chr.c  ft_memdup.c  ft_memjoin.c  ft_print_bits.c  ft_putchar.c  ft_putmem.c  ft_putstr.c  ft_sizet_to_a.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strreverse.c  ft_strtoupper.c  ft_ulongtoa_base.c  ft_unistrlen.c  get_next_line.c  get_next_line.h  libft.h  write_digit_base.c
